add file writer, make dynamic webpage

--- a/MyWeb/public/html/miss.html
+++ b/MyWeb/public/html/miss.html
@@ -16,6 +16,7 @@
     <style>
         body {
             background-color: #ffe3e1;
+            font-family: 'Abril Fatface', cursive;
         }
         .tt{
             font-family: "Nothing You Could Do";
@@ -33,6 +34,40 @@
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-left: 70px;">
+    <a class="navbar-brand" href="#">News</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/html/mainpage.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/html/link.html">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    More
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="beuty.html">Beauty</a>
+                    <a class="dropdown-item" href="#">Photo</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="ask.html">Ask me</a>
+                </div>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-danger" type="submit">Search</button>
+        </form>
+    </div>
+</nav>
 <div class="container">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
