--- a/MyWeb/public/html/ask.html
+++ b/MyWeb/public/html/ask.html
@@ -15,7 +15,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: 'Nothing You Could Do', cursive;
+            font-family: 'Abril Fatface', cursive;
             position: relative;
             background-color: #ffe3e1;
 
@@ -33,27 +33,60 @@
         }
     </style>
 </head>
-<body>
-<form>
+<body><nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-left: 70px;">
+    <a class="navbar-brand" href="#">News</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/html/mainpage.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/html/link.html">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    More
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="beuty.html">Beauty</a>
+                    <a class="dropdown-item" href="#">Photo</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="ask.html">Ask me</a>
+                </div>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-danger" type="submit">Search</button>
+        </form>
+    </div>
+</nav>
+<form action="/info">
     <div class="container">
         <p> </p>
         <h1 class="display-4">Some questions?</h1>
         <div class="form-group">
             <p></p>
             <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            <input type="text" name = "email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                    placeholder="Enter email">
             <small id="emailHelp" class="form-text text-muted">For answer your question</small>
         </div>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">Write your question here</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea type= "text" name= "answer" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
         <div class="form-group form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Post a reply to the question</label>
         </div>
-        <button type="button" class="btn btn-outline-dark">Submit</button>
+        <button type="submit" name="" class="btn btn-outline-dark">Submit</button>
     </div>
 </form>
 </body>
